--- a/config/config.yml
+++ b/config/config.yml
@@ -1,16 +1,17 @@
-business_name: MyIT CRM Stuffs
+business_name:
+  default: MyIT CRM Stuffs
 business_slogan:
-  default: Test
+  default: The Best Free and opensource Repairs Business CRM Software!
 business_phone:
-  default: Test
+  default: '02 9999 8888'
 business_toll_free:
-  default: Test
+  default: '02 9999 8888'
 business_fax:
-  default: Test
+  default: '02 9999 8888'
 business_mobile:
-  default: Test
+  default: '02 9999 8888'
 business_email:
-  default: Test
+  default: me@example.com
 business_address:
-  default: Test
+  default: '45 Fake Road'
 
