Misc fixes and layouts mainly with invoicing.

--- a/config/config.yml
+++ b/config/config.yml
@@ -26,6 +26,17 @@ logout_limit:
   default: 'true'
 version:
   default: 'v2.0.0'
+default_invoice_terms:
+  serialized: true
+  default:
+  - "tracker"
+  - "status"
+  - "priority"
+  - "subject"
+  - "assigned_to"
+  - "updated_on"
+default_invoice_note:
+  default: 'Thankyou for your support and Business. All work is Guaranteed for up to 14 days from date of completion.'
 
 
 
