--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
+before_script:
+  - mysql -e 'create database myitcrm_test;'
+  - "script/setup"
+
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-#script: bundle exec rspec spec
