--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
+language: ruby
+
 before_script:
   - mysql -e 'create database myitcrm_test;'
   - "script/setup"
 
 rvm:
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
