--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: ruby
 
 before_script:
   - mysql -e 'create database myitcrm_test;'
-  - ruby script/setup
-  
+  - ruby script/setup  
 
 env:
   - DB=mysql
 
 rvm:
   - 1.9.3
+  - ruby-head
