--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 config/database.yml
 db/*.db
 db/*.sqlite3
-log/development.log
-log/test.log
-log/production.log
-log/server.log
+*.log
 .idea
 test
 tmp
